sumo/tests/sumo/errors/network/edge/root__edge#id__false2/errors.sumo
Error: The edge '2' within route 'route0' is not known.
 The route can not be build.
Quitting (on error).
